fix Contrast

--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,6 @@ body {
 
 .box-data {
     margin: 10px 20px;
-    color: #3498db;
 }
 
 p img {
